--- a/django_web_app/blog/templates/blog/base.html
+++ b/django_web_app/blog/templates/blog/base.html
@@ -12,9 +12,9 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" >
     <link rel="stylesheet" href="{% static 'blog/main.css' %}">
     {% if title %}
-        <title>Django WebApp - {{title}}</title>
+        <title>Pranav's App - {{title}}</title>
     {% else %}
-        <title>Django WebApp</title>
+        <title>Pranav's App</title>
     {% endif %}
 
 </head>
