again updated base.html

--- a/django_web_app/blog/templates/blog/base.html
+++ b/django_web_app/blog/templates/blog/base.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" >
     <link rel="stylesheet" href="{% static 'blog/main.css' %}">
     {% if title %}
-        <title>Pranav's App - {{title}}</title>
+        <title>Pranav's App</title>
     {% else %}
         <title>Pranav's App</title>
     {% endif %}
