more changes to base.html

--- a/django_web_app/blog/templates/blog/base.html
+++ b/django_web_app/blog/templates/blog/base.html
@@ -16,7 +16,7 @@
     {% else %}
         <title>Pranav's App</title>
     {% endif %}
-
+    <h1>Hello, Changes to the website</h1>
 </head>
   <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
